--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -42,18 +43,24 @@
             <div class="col-lg-6">
                 <div class="d-flex align-items-center justify-content-center">
                     <a href="index.html" class="navbar-brand ms-lg-5">
-                        
+
                         <h1 class="m-0 display-4 text-primary">
-                           <span><img src="img/freshdal_logo.png" alt="freshdal_logo" width="120"></span> <span class="text-secondary">Fresh</span>Dal</h1>
+                            <span><img src="img/freshdal_logo.png" alt="freshdal_logo" width="120"></span> <span
+                                class="text-secondary">Fresh</span>Dal
+                        </h1>
                     </a>
                 </div>
             </div>
             <div class="col-lg-3">
                 <div class="d-flex align-items-center justify-content-end">
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.facebook.com/profile.php?id=100086683643075"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i
+                            class="fab fa-twitter"></i></a> -->
+                    <a class="btn btn-primary btn-square rounded-circle me-2"
+                        href="https://www.facebook.com/profile.php?id=100086683643075"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <!-- <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-primary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a> -->
                 </div>
             </div>
         </div>
@@ -71,7 +78,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="ourproduct.html" class="nav-item nav-link">Our Products</a>
                 <!-- <a href="product.html" class="nav-item nav-link">Product</a> -->
@@ -117,32 +124,26 @@
             <div class="row g-0">
                 <div class="col-lg-7">
                     <div class="bg-primary h-100 p-5">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-6">
-                                    <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-6">
-                                    <input type="email" class="form-control bg-light border-0 px-4" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-light border-0 px-4 py-3" rows="2" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-secondary w-100 py-3" type="submit">Send Message</button>
-                                </div>
+                        <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg p-5">
+                        <h4 class="text-white">Request For Quote</h4>
+                        <!-- <h6 class="text-white">Subscribe Our Newsletter</h6> -->
+                        <p class="text-white">Contact Our team today for exclusive offers</p>
+                        <form action="">
+                            <div class="input-group">
+                                <!-- <input type="text" class="form-control border-white p-3" placeholder="Your Email"> -->
+                                <button class="btn btn-secondary">Request Quote</button>
                             </div>
                         </form>
+                    </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="bg-secondary h-100 p-5">
                         <h2 class="text-white mb-4">Get In Touch</h2>
                         <div class="d-flex mb-4">
-                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
                                 <i class="bi bi-geo-alt fs-4 text-white"></i>
                             </div>
                             <div class="ps-3">
@@ -151,7 +152,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-4">
-                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
                                 <i class="bi bi-envelope-open fs-4 text-white"></i>
                             </div>
                             <div class="ps-3">
@@ -160,7 +162,8 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
+                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                                style="width: 60px; height: 60px;">
                                 <i class="bi bi-phone-vibrate fs-4 text-white"></i>
                             </div>
                             <div class="ps-3">
@@ -186,7 +189,8 @@
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">Dattatreya nagar, Hayathnagar, Hyderabad, Telangana 501505</p>
+                                <p class="text-white mb-0">Dattatreya nagar, Hayathnagar, Hyderabad, Telangana 501505
+                                </p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
@@ -198,24 +202,33 @@
                             </div>
                             <div class="d-flex mt-4">
                                 <!-- <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-secondary btn-square rounded-circle me-2" href="https://www.facebook.com/profile.php?id=100086683643075"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-secondary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-secondary btn-square rounded-circle me-2"
+                                    href="https://www.facebook.com/profile.php?id=100086683643075"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <!-- <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i
+                                        class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-secondary btn-square rounded-circle" href="#"><i
+                                        class="fab fa-instagram"></i></a> -->
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white mb-2" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Home</a>
-                                <a class="text-white mb-2" href="/about.html"><i class="bi bi-arrow-right text-white me-2"></i>About Us</a>
-                                <a class="text-white mb-2" href="/product.html"><i class="bi bi-arrow-right text-white me-2"></i>Our Products</a>
-                                <a class="text-white" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Contact Us</a>
+                                <a class="text-white mb-2" href="#"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>Home</a>
+                                <a class="text-white mb-2" href="/about.html"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>About Us</a>
+                                <a class="text-white mb-2" href="/product.html"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>Our Products</a>
+                                <a class="text-white" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
+                    <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
                         <h4 class="text-white">Request For Quote</h4>
                         <!-- <h6 class="text-white">Subscribe Our Newsletter</h6> -->
                         <p>Contact Our team today for exclusive offers</p>
@@ -232,8 +245,10 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">FreshDal</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://techpranee.com/">TechPranee</a></p>
-            <br>Distributed By: <a class="text-secondary fw-bold" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">FreshDal</a>. All Rights Reserved.
+                Designed by <a class="text-secondary fw-bold" href="http://techpranee.com/">TechPranee</a></p>
+            <br>Distributed By: <a class="text-secondary fw-bold" href="https://themewagon.com"
+                target="_blank">ThemeWagon</a>
         </div>
     </div>
     <!-- Footer End -->
