--- a/ourproduct.html
+++ b/ourproduct.html
@@ -13,7 +13,8 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -42,18 +43,24 @@
             <div class="col-lg-6">
                 <div class="d-flex align-items-center justify-content-center">
                     <a href="index.html" class="navbar-brand ms-lg-5">
-                        
+
                         <h1 class="m-0 display-4 text-primary">
-                           <span><img src="img/freshdal_logo.png" alt="freshdal_logo" width="120"></span> <span class="text-secondary">Fresh</span>Dal</h1>
+                            <span><img src="img/freshdal_logo.png" alt="freshdal_logo" width="120"></span> <span
+                                class="text-secondary">Fresh</span>Dal
+                        </h1>
                     </a>
                 </div>
             </div>
             <div class="col-lg-3">
                 <div class="d-flex align-items-center justify-content-end">
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.facebook.com/profile.php?id=100086683643075"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-primary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i
+                            class="fab fa-twitter"></i></a> -->
+                    <a class="btn btn-primary btn-square rounded-circle me-2"
+                        href="https://www.facebook.com/profile.php?id=100086683643075"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <!-- <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-primary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a> -->
                 </div>
             </div>
         </div>
@@ -71,7 +78,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="ourproduct.html" class="nav-item nav-link">Our Products</a>
                 <!-- <a href="product.html" class="nav-item nav-link">Product</a> -->
@@ -120,7 +127,8 @@
                         <div class="col-10">
                             <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/yellow_dal.jpg" alt="">
-                                <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4" style="background: rgba(52, 173, 84, .85);">
+                                <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4"
+                                    style="background: rgba(52, 173, 84, .85);">
                                     <h4 class="text-white">Toor Dal (Kandi Pappu)</h4>
                                     <span class="text-white">Single polish Organic Dal</span>
                                 </div>
@@ -133,7 +141,8 @@
                         <div class="col-10">
                             <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/white_dal_bg.jpg" alt="">
-                                <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4" style="background: rgba(52, 173, 84, .85);">
+                                <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4"
+                                    style="background: rgba(52, 173, 84, .85);">
                                     <h4 class="text-white">Urad Dal (Minna Pappu)</h4>
                                     <span class="text-white">Single polish Organic Dal</span>
                                 </div>
@@ -145,58 +154,66 @@
         </div>
     </div>
     <!-- Team End -->
-    
-        <!-- Services Start -->
-        <div class="container-fluid py-5">
-            <div class="container">
-                <div class="row g-5">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="mb-3">
-                            <h6 class="text-primary text-uppercase">Specialities</h6>
-                            <h1 class="display-5">Benefits of Organic Dal</h1>
-                        </div>
-                        <p class="mb-4">Tempor erat elitr at rebum at at clita. Diam dolor diam ipsum et tempor sit. Clita erat ipsum et lorem et sit sed stet labore</p>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5">Contact Us</a>
+
+    <!-- Services Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6">
+                    <div class="mb-3">
+                        <h6 class="text-primary text-uppercase">Specialities</h6>
+                        <h1 class="display-5">Benefits of Organic Dal</h1>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item bg-light text-center p-5">
-                            <i class="fa fa-child display-1 text-primary mb-3"></i>
-                            <h4>Good Source of Protein</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
-                        </div>
+                    <p class="mb-4">Dal has traditionally been used for its health benefits, aiding digestion and
+                        boosting immunity. The unpolished and unprocessed version tend to be little more healthier than
+                        polished one.</p>
+                    <a href="" class="btn btn-primary py-md-3 px-md-5">Contact Us</a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item bg-light text-center p-5">
+                        <i class="fa fa-child display-1 text-primary mb-3"></i>
+                        <h4>Good Source of Protein</h4>
+                        <p class="mb-0">Unpolished pulses are tend to contain higher amount of Protein from which helps
+                            maintain muscle mass.</p>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item bg-light text-center p-5">
-                            <i class="fa fa-check display-1 text-primary mb-3"></i>
-                            <h4>Organic Food</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item bg-light text-center p-5">
+                        <i class="fa fa-check display-1 text-primary mb-3"></i>
+                        <h4>Unprocessed Food</h4>
+                        <p class="mb-0">The absence of preservatives makes unprocessed dal easier to digest than
+                            processed varieties!</p>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item bg-light text-center p-5">
-                            <i class="fa fa-check-double display-1 text-primary mb-3"></i>
-                            <h4>Healthy Fiber</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item bg-light text-center p-5">
+                        <i class="fa fa-check-double display-1 text-primary mb-3"></i>
+                        <h4>Healthy Fiber</h4>
+                        <p class="mb-0">As pulses are rich in fiber they also take longer to break down in the stomach
+                            than other carbs and hence provide more steady energy release.</p>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item bg-light text-center p-5">
-                            <i class="fa fa-receipt display-1 text-primary mb-3"></i>
-                            <h4>Nutrient Load</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item bg-light text-center p-5">
+                        <i class="fa fa-receipt display-1 text-primary mb-3"></i>
+                        <h4>Nutrient Load</h4>
+                        <p class="mb-0">Unpolished dal is full of nutrition and fiber that aids in digestion, which
+                            means it may help lower cholesterol and blood pressure, as well as regulate blood sugar
+                            levels.</p>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item bg-light text-center p-5">
-                            <i class="fa fa-heart display-1 text-primary mb-3"></i>
-                            <h4>Healthy Heart</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-item bg-light text-center p-5">
+                        <i class="fa fa-heart display-1 text-primary mb-3"></i>
+                        <h4>Healthy Heart</h4>
+                        <p class="mb-0">The improved nutrient load and lack of cholesterol ensure a healthy heart. These
+                            dals also help reduce the blood pressure.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Services End -->
+    </div>
+    <!-- Services End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-footer bg-primary text-white mt-5">
@@ -208,7 +225,8 @@
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">Dattatreya nagar, Hayathnagar, Hyderabad, Telangana 501505</p>
+                                <p class="text-white mb-0">Dattatreya nagar, Hayathnagar, Hyderabad, Telangana 501505
+                                </p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
@@ -220,24 +238,33 @@
                             </div>
                             <div class="d-flex mt-4">
                                 <!-- <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-secondary btn-square rounded-circle me-2" href="https://www.facebook.com/profile.php?id=100086683643075"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-secondary btn-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-secondary btn-square rounded-circle me-2"
+                                    href="https://www.facebook.com/profile.php?id=100086683643075"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <!-- <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i
+                                        class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-secondary btn-square rounded-circle" href="#"><i
+                                        class="fab fa-instagram"></i></a> -->
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white mb-2" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Home</a>
-                                <a class="text-white mb-2" href="/about.html"><i class="bi bi-arrow-right text-white me-2"></i>About Us</a>
-                                <a class="text-white mb-2" href="/product.html"><i class="bi bi-arrow-right text-white me-2"></i>Our Products</a>
-                                <a class="text-white" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Contact Us</a>
+                                <a class="text-white mb-2" href="#"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>Home</a>
+                                <a class="text-white mb-2" href="/about.html"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>About Us</a>
+                                <a class="text-white mb-2" href="/product.html"><i
+                                        class="bi bi-arrow-right text-white me-2"></i>Our Products</a>
+                                <a class="text-white" href="#"><i class="bi bi-arrow-right text-white me-2"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
+                    <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
                         <h4 class="text-white">Request For Quote</h4>
                         <!-- <h6 class="text-white">Subscribe Our Newsletter</h6> -->
                         <p>Contact Our team today for exclusive offers</p>
@@ -254,8 +281,10 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">FreshDal</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://techpranee.com/">TechPranee</a></p>
-            <br>Distributed By: <a class="text-secondary fw-bold" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">FreshDal</a>. All Rights Reserved.
+                Designed by <a class="text-secondary fw-bold" href="http://techpranee.com/">TechPranee</a></p>
+            <br>Distributed By: <a class="text-secondary fw-bold" href="https://themewagon.com"
+                target="_blank">ThemeWagon</a>
         </div>
     </div>
     <!-- Footer End -->
